<resources>
    <string name="app_name">Fudora</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!--<string-array name="total_users">
        <string name="one_users">1</string>
        <string name="two_users">2</string>
        <string name="three_users">3 </string>
        <string name="four_users">4</string>
        <string name="five_users">5</string>
        <string name="six_users">6</string>
    </string-array>

    !-->
    <string name="search">Search!</string>
    <string name="title">Enter a title for your event?</string>
    <string name="purpose">What is the purpose?</string>
    <string name="attire">What is the attire?</string>
    <string name="attendence">How many people are you expecting?</string>
    <string name="address">Where is the event held?</string>
    <string name="cost">What is the cost of attendence</string>
    <string name="preview">What types of food will be served? (up to 3)</string>
    <string name="phone">How can you be reached for further questions?</string>
    <string name="commit">Commit a venue</string>
    <string name="title_label">Title</string>
    <string name="purpose_label">Purpose</string>
    <string name="attire_label">Attire</string>
    <string name="attendence_label">Attendence</string>
    <string name="address_label">Address</string>
    <string name="cost_label">Cost</string>
    <string name="preview_label">Preview</string>
    <string name="phone_label">Phone</string>
    <string name="created_commit">Created commit</string>
    <string name="submit_btn">Submit</string>
    <string name="cancel_btn">Cancel</string>
    <string name="quick_start">Quick Start Search!</string>
    <string name="into_toast">Enter up to four words to search for</string>
    <string name ="voice_search">Voice Search</string>
    <string name ="manual_search">Search</string>
    <string name ="man_txt">Manual Search</string>
    
    <string-array name="Spinner_Items">
        <item>Turkey</item>
        <item>Shrimp</item>
        <item>Pasta</item>


    </string-array>

    <?xml version="1.0" encoding="utf-8"?>
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/spinnerTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/spinnerImages"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"/>"

        </TableRow>

    </TableLayout>



</resources>
