<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#03A9F4">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:id="@+id/relview"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_label"
            android:id="@+id/textView3"
            android:textColor="#ffffffff" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textColorHint="#ffffffff"
            android:id="@+id/editText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/purpose_label"
            android:id="@+id/textView4"
            android:textColor="#ffffffff" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/purpose"
            android:textColorHint="#ffffffff"
            android:id="@+id/purposeid" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/attendence_label"
            android:id="@+id/textView5"
            android:textColor="#ffffffff" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/attendence"
            android:ems="10"
            android:textColorHint="#ffffffff"
            android:id="@+id/numberid" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/address_label"
            android:id="@+id/textView6"
            android:textColor="#ffffffff" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:hint="@string/address"
            android:textColorHint="#ffffffff"
            android:id="@+id/addressid" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cost_label"
            android:id="@+id/textView7"
            android:textColor="#ffffffff" />

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/cost"
            android:textColorHint="#ffffffff"
            android:layout_height="wrap_content"
            android:id="@+id/costid" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/phone_label"
            android:id="@+id/textView8"
            android:textColor="#ffffffff" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#ffffffff"
            android:hint="@string/phone"
            android:id="@+id/phoneid" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_btn"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:background="#00FFBF"
                android:id="@+id/button"
                android:textColor="#ffffffff" />

        </LinearLayout>

        EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText2" />

    </LinearLayout>

</ScrollView>

<!--
    <?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:id="@+id/relview"
android:layout_height="match_parent"
    >
<TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/commit"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:layout_above="@+id/addimage"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="40dp" />

<ImageButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/addimage"
    android:background="@drawable/add"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/created_commit"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:gravity="center"
    android:id="@+id/textView9"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="Large Text"
    android:id="@+id/textView10"
    android:layout_below="@+id/textView9"
    android:layout_alignRight="@+id/addimage"
    android:layout_alignEnd="@+id/addimage"
    android:layout_marginTop="44dp" />
</RelativeLayout>
!-->